[metadata]
name = go1py
version = 0.1.0
description = Python Library for Go1 Robot Control
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/go1py
license = MIT

[options]
python_requires = >=3.8
package_dir =
    = src
packages = find:
install_requires =
    paho-mqtt>=1.6.1
    numpy>=1.20.0
    events>=0.5

[options.packages.find]
where = src